11/19/25
  Workers - NeoRazer
  Things changed:
    Attempted to fix mobile bugs.

11/18/25
  Workers - ImmatureGoat,SamZua, NeoRazer
  Things changed:
    Fixed navigation bar bugs where it didnt stop scrolling in the right stop and the home button didn't work.
    Changed color scheme
    Made map include locations (samuel cooked)
11/17/25
  Workers - ImmatureGoat, SamZua
  Things changed: 
    Moved Hero down
    Fixed grammatical errors
    Made text more visible on main page, student page, and senior page