@@ -1,0 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>supa secret credits</title>
+</head>
+<body>
+    <p><a href="index.html">Return to website</a></p>
+    <h1>Supa Secret Credits</h1>
+    <p>Good job for finding the credits</p>
+    <p>This website was made by Studio BDT</p>
+    <p>Specifically, the people below.</p>
+    <ul>
+        <!-- guys link ur the website you want here like github or smth idk -->
+        <li><h2><a href="octaviustheking.github.io/immaturegoat">ImmatureGoat</a></h2></li>
+        <li><h2><a href="">SamZua</a></h2></li>
+        <li><h2><a href="">NeoRazer</a></h2></li>
+    </ul>
+</body>
+</html>
