@@ -10,7 +10,7 @@
     <meta property="og:description" content="Join our musical family connecting generations through live performances in Suwanee, GA.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://crescendoinitiativesuwanee.org">
-    <meta property="og:image" content="images/logo-official.jpg">
+    <meta property="og:image" content="images/new-logo.jpeg">
     
     <title>Crescendo Initiative Suwanee - Connecting Through Music</title>
     
@@ -33,11 +33,11 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: #0F0F0F;">
         <div class="container">
             <div class="nav-brand">
                 <a href="#hero">
-                    <img src="images/logo-official.jpg" alt="Crescendo Initiative Logo" class="logo-img">
+                    <img src="images/new-logo.jpeg" alt="Crescendo Initiative Logo" class="logo-img">
                     <div class="logo-text">
                         <span class="logo-main">Crescendo Initiative</span>
                         <span class="logo-sub">Suwanee, GA</span>
@@ -53,8 +53,8 @@
                 <li><a href="#contact">Contact</a></li>
                 <!-- NEW: permanent nav link for students -->
                 <li><a href="musicians.html">Musicians</a></li>
-                <li><a href="students.html" class="btn-primary">Students</a></li>
-                <li><a href="senior-homes.html" class="btn-primary">Seniors</a></li>
+                <li><a href="students.html" class="btn-primary" style="color: #0F0F0F;">Students</a></li>
+                <li><a href="senior-homes.html" class="btn-primary" style="color: #0F0F0F;">Seniors</a></li>
             </ul>
             <div class="hamburger">
                 <span></span><span></span><span></span>
@@ -67,7 +67,7 @@
         <div class="hero-gradient"></div>
         <div class="container">
             <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
-                <img src="images/logo-official.jpg" alt="Crescendo Initiative Logo" class="hero-logo" data-aos="zoom-in" data-aos-delay="200">
+                <img src="images/new-logo.jpeg" alt="Crescendo Initiative Logo" class="hero-logo" data-aos="zoom-in" data-aos-delay="200">
                 <h1 class="hero-title">Crescendo Initiative</h1>
                 <p class="hero-subtitle">Connecting generations through the entrancing power of music. A dedicated family spreading happiness across Suwanee, Georgia and beyond.</p>
                 <div class="hero-stats">
@@ -109,7 +109,7 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">About Crescendo Initiative</h2>
+            <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9; margin-bottom: 15px;">About Crescendo Initiative</h2>
             <div class="about-content" data-aos="fade-up" data-aos-delay="80">
                 <div class="founder-section">
                     <img src="images/founder-photo.jpg" alt="Smyan Reddy, Founder" class="founder-photo" data-aos="fade-right" data-aos-delay="300">
@@ -137,7 +137,7 @@
     <!-- Performances Section -->
     <section id="performances" class="performances">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Our Performances</h2>
+            <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9;">Our Performances</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Bringing music to senior communities across Georgia</p>
             
             <div class="performance-grid">
@@ -197,7 +197,7 @@
     <!-- Videos Section (GitHub-friendly) -->
     <section id="videos" class="videos">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Performance Videos</h2>
+            <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9;">Performance Videos</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Experience our music through recorded performances</p>
             
             <div class="video-grid">
@@ -225,7 +225,7 @@
             
             <div class="additional-media" data-aos="fade-up" data-aos-delay="400">
                 <h3>Additional Media</h3>
-                <div class="media-grid">
+                <div class="media-grid" style="color: #666;">
                     <a href="https://drive.google.com/drive/folders/1zQuCIrI3gsLiifaATufUzwtWDkfSWtJx" target="_blank" class="media-link">
                         <i class="fab fa-google-drive"></i>
                         <span>September 6 Concert Videos</span>
@@ -244,7 +244,7 @@
     </section>
 
     <!-- Calendar Section -->
-    <section id="calendar" class="calendar-section">
+    <section id="calendar" class="calendar-section" style="color: #F2E6C9;">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Performance Calendar</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Join us for our next concert!</p>
@@ -256,7 +256,7 @@
             <div class="next-concert" data-aos="fade-up" data-aos-delay="300">
                 <h3>Next Concert</h3>
                 <div class="concert-details">
-                    <div class="concert-date">November 22, 2025</div>
+                    <div class="concert-date" style="color:#F2E6C9;">November 22, 2025</div>
                     <h4>Sunrise of Johns Creek</h4>
                     <p>Join us for an afternoon of beautiful music connecting generations</p>
                     <div class="concert-time">1:30 PM - 2:15 PM</div>
@@ -272,7 +272,7 @@
     <!-- Map Section -->
     <section id="map" class="map-section">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Where We Play</h2>
+            <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9;">Where We Play</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Bringing music to communities across North Georgia</p>
             
             <div class="map-container" data-aos="fade-up" data-aos-delay="200">
@@ -317,7 +317,7 @@
                 </div>
                 <div class="headquarters-info">
                     <h4><i class="fas fa-home"></i> Headquartered in Suwanee, GA</h4>
-                    <p style="color: white;">Serving senior communities throughout North Georgia</p>
+                    <p style="color: #666">Serving senior communities throughout North Georgia</p>
                 </div>
             </div>
         </div>
@@ -326,7 +326,7 @@
     <!-- Leadership Section -->
     <section id="leadership" class="leadership">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Our Leadership</h2>
+            <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9;">Our Leadership</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Meet the team behind Crescendo Initiative</p>
             
             <div class="leadership-grid">
@@ -392,11 +392,11 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Get In Touch</h2>
+            <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9;">Get In Touch</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Interested in having us perform at your venue in Georgia?</p>
             
             <div class="contact-content" data-aos="fade-up" data-aos-delay="200">
-                <div class="contact-info">
+                <div class="contact-info" style="color: #666;">
                     <h3>Contact Information</h3>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -432,8 +432,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="images/logo-official.jpg" alt="Crescendo Initiative Logo" class="footer-logo">
-                    <h3>Crescendo Initiative</h3>
+                    <img src="images/new-logo.jpeg" alt="Crescendo Initiative Logo" class="footer-logo">
+                    <h3 style="color: #D4A44A;">Crescendo Initiative</h3>
                     <p>Connecting Through Music</p>
                     <p>Spreading happiness across Suwanee, Georgia and beyond</p>
                     <p>Headquartered in Suwanee, GA | Serving North Georgia Communities</p>
@@ -469,6 +469,7 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Crescendo Initiative Suwanee. A 501(c)(3) nonprofit organization.</p>
                 <p>Headquartered in Suwanee, Georgia | Bringing music to senior communities</p>
+                <p><a href="credits.html">This website was made by Studio BDT</a></p>
             </div>
         </div>
     </footer>
