@@ -4,15 +4,15 @@
    ========================================== */
 
 :root {
-    --primary-red: #A55150;
+    --primary-red: #F2E6C9;
     /* idk why I can't find the primary blues in index.html */
-    --primary-blue: #A55150;
-    --accent-orange: #F0D589;
+    --primary-blue: #F2E6C9;
+    --accent-orange: #D4A44A;
     --text-dark: #1a1a1a;
     --text-light: #666;
-    --bg-light: #f8fafc;
-    --bg-white: #ffffff;
-    --border-light: #e2e8f0;
+    --bg-light: #0F0F0F;
+    --bg-white: #1A1A1A;
+    --border-light: background-color: #0F0F0F;
     --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
     --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
     --gradient: linear-gradient(135deg, var(--primary-blue) 0%, var(--accent-orange) 100%);
@@ -127,7 +127,7 @@ a {
     display: inline-block;
     padding: 0.875rem 2rem;
     background: var(--gradient);
-    color: white;
+    color: #0A1A2F;
     border: none;
     border-radius: 8px;
     font-weight: 600;
@@ -154,7 +154,7 @@ a {
 
 .btn-secondary:hover, .btn-hero-secondary:hover, .btn-cta-secondary:hover {
     background: var(--primary-blue);
-    color: white;
+    color: #0A1A2F;
 }
 
 /* Navigation */
@@ -252,6 +252,16 @@ section {
     gap: 0.75rem;
 }
 
+.navbar-nav .nav-link,
+.navbar-brand {
+    color: #ffffff !important; /* readable */
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-brand:hover {
+    color: #ffd66b !important; /* gold hover like your logo */
+}
+
 .logo-img {
     width: 50px;
     height: 50px;
@@ -283,11 +293,12 @@ section {
     list-style: none;
     gap: 2rem;
     align-items: center;
+    color: #666;
 }
 
 .nav-menu a {
     font-weight: 500;
-    color: var(--text-dark);
+    color: #F2E6C9;
     position: relative;
     font-size: 0.95rem;
 }
@@ -459,12 +470,13 @@ section {
     border-radius: 12px;
     border-left: 4px solid var(--accent-orange);
     text-align: left;
+    color: #666;
 }
 
 .founder-quote p {
     font-size: 1.25rem;
     font-style: italic;
-    color: var(--text-dark);
+    color: #666;
     margin-bottom: 1rem;
     line-height: 1.6;
 }
@@ -519,7 +531,7 @@ section {
 }
 
 .performance-card {
-    background: white;
+    background: #0A1A2F;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: var(--shadow);
@@ -534,7 +546,7 @@ section {
 
 .performance-date {
     background: var(--gradient);
-    color: white;
+    color: #0A1A2F;
     padding: 0.5rem 1rem;
     border-radius: 20px;
     font-size: 0.9rem;
@@ -596,7 +608,7 @@ section {
 }
 
 .video-card {
-    background: white;
+    background: #0A1A2F;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: var(--shadow);
@@ -660,13 +672,13 @@ section {
     background: var(--bg-light);
     border-radius: 8px;
     text-decoration: none;
-    color: var(--text-dark);
+    color: #F2E6C9;
     transition: all 0.3s ease;
 }
 
 .media-link:hover {
     background: var(--primary-blue);
-    color: white;
+    color: #0A1A2F;
     transform: translateY(-2px);
 }
 
@@ -676,7 +688,7 @@ section {
 }
 
 .media-link:hover i {
-    color: white;
+    color: #0A1A2F;
 }
 
 /* Calendar Section */
@@ -686,7 +698,7 @@ section {
 }
 
 .calendar-container {
-    background: white;
+    background: #0A1A2F;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: var(--shadow);
@@ -700,7 +712,7 @@ section {
 
 .next-concert {
     background: var(--gradient);
-    color: white;
+    color: #0A1A2F;
     padding: 2rem;
     border-radius: 12px;
     text-align: center;
@@ -745,7 +757,7 @@ section {
 }
 
 .map-container {
-    background: white;
+    background: #0A1A2F;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: var(--shadow);
@@ -771,7 +783,7 @@ section {
 }
 
 .venue-item {
-    background: white;
+    background: #0A1A2F;
     padding: 1.5rem;
     border-radius: 8px;
     box-shadow: var(--shadow);
@@ -784,7 +796,7 @@ section {
 
 .venue-type {
     background: var(--accent-orange);
-    color: white;
+    color: #0A1A2F;
     padding: 0.25rem 0.75rem;
     border-radius: 15px;
     font-size: 0.8rem;
@@ -807,7 +819,7 @@ section {
 
 .headquarters-info {
     background: var(--primary-blue);
-    color: white;
+    color: #0A1A2F;
     padding: 1.5rem;
     border-radius: 8px;
     text-align: center;
@@ -831,7 +843,7 @@ section {
 }
 
 .leader-card {
-    background: white;
+    background: #0A1A2F;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: var(--shadow);
@@ -864,7 +876,7 @@ section {
 
 .leader-avatar i {
     font-size: 3rem;
-    color: white;
+    color: #0A1A2F;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -941,7 +953,7 @@ section {
 /* Footer */
 .footer {
     background: var(--text-dark);
-    color: white;
+    color: #0A1A2F;
     padding: 3rem 0 1rem;
 }
 
@@ -1018,7 +1030,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: #0A1A2F;
     transition: all 0.3s ease;
 }
 
@@ -1046,7 +1058,7 @@ section {
         left: -100%;
         top: var(--nav-height);
         flex-direction: column;
-        background: white;
+        background: #0A1A2F;
         width: 100%;
         text-align: center;
         transition: 0.3s;
