@@ -1,14 +1,17 @@
 11/19/25
-  Workers - NeoRazer
+  Workers - NeoRazer, ImmatureGoat
   Things changed:
     Attempted to fix mobile bugs.
+    Updated logo. 
+    Changed color scheme (i'm a fricking genius)
 
 11/18/25
-  Workers - ImmatureGoat,SamZua, NeoRazer
+  Workers - ImmatureGoat, SamZua, NeoRazer
   Things changed:
     Fixed navigation bar bugs where it didnt stop scrolling in the right stop and the home button didn't work.
     Changed color scheme
     Made map include locations (samuel cooked)
+
 11/17/25
   Workers - ImmatureGoat, SamZua
   Things changed: 
